@@ -139,7 +139,7 @@
 <UL>
 <LI>Inputs
     <UL>
-    <LI><A HREF="/data/loads/uniprot/uniprotload/uniprotload_override/input/override.txt">Input File</A>
+    <LI><A HREF="/data/loads/uniprot/uniprotload/uniprotload_override/input/override.txt">Master Input File</A>
     </UL>
 <LI>Outputs
     <UL>
